0025849: Warnings on OCCT and PRODUCTS in 64-bit

Fix warnings.